--- a/worker/package.json
+++ b/worker/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "deploy": "wrangler deploy"
+    "deploy": "cd .. && npm run deploy:zaraz"
   },
   "dependencies": {
     "@managed-components/types": "^1.3.6"
