--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
   "dependencies": {
     "@absmartly/javascript-sdk": "^1.13.2",
     "@absmartly/sdk-plugins": "^1.1.2",
-    "dompurify": "^3.3.0",
-    "linkedom": "^0.18.12"
+    "isomorphic-dompurify": "^2.35.0",
+    "linkedom": "^0.18.12",
+    "wrangler": "^4.54.0"
   },
   "devDependencies": {
     "@managed-components/types": "^1.3.1",
